# mate-display-manager

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
common/: Makefile  Makefile.am  Makefile.in  mdm-address.c  mdm-common.c  mdm-log.c  mdm-settings-keys.h  mdm-settings.c  mdm-settings.h  mdm-settings.xml
daemon/: Makefile  Makefile.am  Makefile.in  factory-slave-main.c  main.c  mdm-display.c  mdm-greeter-server.c  mdm-greeter-server.h  mdm-local-display-factory.c  mdm-local-display-factory.h  mdm-local-display-factory.xml  mdm-manager.c  mdm-manager.h  mdm-server.c  mdm-server.h  mdm-session-direct.c  mdm-session-linux-auditor.c  mdm-session-settings.c  mdm-session-settings.h  mdm-session-solaris-auditor.c  mdm-session-worker.c  mdm-simple-slave.c  mdm-simple-slave.h  mdm-slave.c  mdm-slave.h  mdm-static-display.c  mdm-user-manager.c  mdm-user-manager.h  mdm-user-manager.xml  mdm-user-private.h  mdm-user.c  mdm-user.h  mdm.in  product-slave-main.c  session-worker-main.c  simple-slave-main.c  xdmcp-chooser-slave-main.c
data/: Init.in  Makefile  Makefile.am  Makefile.in  PreSession.in  Xsession.in  language-options  mateconf.path  mdm.conf  mdm.conf-custom.in  mdm.conf.in  mdm.policy  mdm.policy.in  mdm.schemas.in  mdm.schemas.in.in  session-setup.entries
debian/: %mateconf-tree.xml  60xdg_path-on-session  rules  (+18 more)
gui/mdmsetup/: Makefile  Makefile.am  Makefile.in  mdm-user-manager.c  mdm-user-manager.h  mdm-user-private.h  mdm-user.c  mdm-user.h  mdmsetup.c  mdmsetup.desktop  mdmsetup.desktop.in  mdmsetup.ui
(+289 files in other folders)
